@@ -340,6 +340,7 @@ final class Ocean_Extra {
 			require_once( OE_PATH .'/includes/jsmin.php' );
 			require_once( OE_PATH .'/includes/panel/notice.php' );
 			require_once( OE_PATH .'/includes/walker.php' );
+			require_once( OE_PATH .'/includes/ocean-extra-strings.php' );
 			require_once( OE_PATH .'/includes/dashboard.php' );
 			require_once( OE_PATH .'/includes/panel/demos.php' );
 
